# flask-testing-demo

./: README.md  config.py  pyproject.toml  run.py
app/: __init__.py  app.py  config.py  routes.py  schemas.py
app/models/: user.py
app/routes/: user.py  weather.py
tests/: conftest.py  test_routes.py  test_weather.py
